--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # datasource
-spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_bf1068b63706381user=baab6313c89e5a&password=74f43fe8
-spring.datasource.username=baab6313c89e5a
-spring.datasource.password=74f43fe8
+spring.datasource.url=jdbc:mysql://localhost:3306/edufind
+spring.datasource.username=root
+spring.datasource.password=2009
 
 # actualizar bd y crear entidades
 spring.jpa.hibernate.ddl-auto=create
